// Tour Booking — ERD kiểu “SQL chuẩn” (snake_case + bảng số nhiều) cho dbdiagram.io
// Giống layout mẫu: đường quan hệ sẽ hiện nhãn user_id, tour_id, ...
// Gợi ý bố cục trên canvas: trên = users + geography + tours | giữa = suppliers + tour_* chi tiết | dưới = bookings + payments + engagement
// Lưu ý: Prisma mặc định có thể map tên bảng PascalCase; dùng @@map("users") nếu muốn khớp 100% với tên dưới đây.

Project tour_booking {
  database_type: 'MySQL'
  Note: '''
    Quy ước hiển thị: snake_case, plural tables.
    Enum Prisma → varchar(32) + ghi chú tên enum.
  '''
}

// =============================================================================
// 1. Người dùng & xác thực (hub giống users trong mẫu)
// =============================================================================

Table users [headercolor: #2563EB] {
  id int [pk, increment]
  email varchar(255) [unique, not null]
  phone varchar(255) [unique]
  password_hash varchar(255) [not null]
  first_name varchar(255)
  last_name varchar(255)
  date_of_birth datetime(3)
  avatar varchar(500)
  status varchar(32) [not null, note: 'enum UserStatus']
  role varchar(32) [not null, note: 'enum Role']
  invitation_token varchar(255)
  invitation_token_expired_at_utc datetime(3)
  failed_login_count int [not null, default: 0]
  email_verified boolean [not null, default: false]
  email_verified_at_utc datetime(3)
  has_password boolean [not null, default: true]
  created_at_utc datetime(3) [not null, default: `now()`]
  updated_at_utc datetime(3) [not null]
}

Table user_preferences [headercolor: #2563EB] {
  id int [pk, increment]
  user_id int [unique, not null, ref: > users.id]
  preferred_locations varchar(500)
  budget_range varchar(255)
  travel_style varchar(255)
}

Table refresh_tokens [headercolor: #7C3AED] {
  id varchar(36) [pk, note: 'uuid']
  user_id int [not null, ref: > users.id]
  refresh_token varchar(500) [unique, not null]
  access_token_jti varchar(255) [not null]
  expired_at_utc datetime(3) [not null]
}

Table blacklisted_access_tokens [headercolor: #7C3AED] {
  id int [pk, increment]
  user_id int [not null, note: 'optional FK → users (Prisma không khai báo relation)']
  jti varchar(255) [not null]
  expired_at_utc datetime(3) [not null]
}

Table reset_password_tokens [headercolor: #7C3AED] {
  id int [pk, increment]
  user_id int [not null, ref: > users.id]
  token varchar(255) [unique, not null]
  expired_at_utc datetime(3) [not null]
  is_sent_email boolean [not null, default: false]
}

Table email_verification_tokens [headercolor: #7C3AED] {
  id int [pk, increment]
  user_id int [not null, ref: > users.id]
  token varchar(255) [unique, not null]
  expired_at_utc datetime(3) [not null]

  Note: 'ON DELETE CASCADE'
}

Table oauth_accounts [headercolor: #7C3AED] {
  id int [pk, increment]
  user_id int [not null, ref: > users.id]
  provider varchar(32) [not null, note: 'enum OAuthProvider']
  provider_user_id varchar(255) [not null]
  created_at_utc datetime(3) [not null, default: `now()`]

  Note: 'ON DELETE CASCADE | UNIQUE(provider, provider_user_id)'
}

// =============================================================================
// 2. Địa lý
// =============================================================================

Table regions [headercolor: #059669] {
  id int [pk, increment]
  name varchar(255)
}

Table provinces [headercolor: #059669] {
  id int [pk, increment]
  region_id int [not null, ref: > regions.id]
  name varchar(255)
}

Table locations [headercolor: #059669] {
  id int [pk, increment]
  province_id int [not null, ref: > provinces.id]
  name varchar(255)
  latitude decimal(10, 7)
  longitude decimal(10, 7)
  description text
  is_active boolean
}

// =============================================================================
// 3. Tour & catalog (đặt chi tiết sát tours / schedules như products / variants)
// =============================================================================

Table tours [headercolor: #D97706] {
  id int [pk, increment]
  departure_location_id int [not null, ref: > locations.id]
  destination_location_id int [not null, ref: > locations.id]
  name text [not null]
  slug varchar(255)
  description text
  duration_days int
  base_price decimal(12, 2)
  max_people int
  thumbnail_url varchar(500)
  rating_avg float
  total_reviews int
  tour_line varchar(32) [note: 'enum TourLine']
  transport_type varchar(32) [note: 'enum TransportType']
  is_active boolean
  is_featured boolean [not null, default: false]
  created_at_utc datetime(3) [default: `now()`]
  inclusions text
  exclusions text
  cancellation_policy text
  single_room_supplement decimal(12, 2)

  Note: 'departure_location_id = khởi hành | destination_location_id = điểm đến (cùng bảng locations)'
}

Table tour_images [headercolor: #D97706] {
  id int [pk, increment]
  tour_id int [not null, ref: > tours.id]
  image_url varchar(500) [not null]
  is_thumbnail boolean
}

Table tour_videos [headercolor: #D97706] {
  id int [pk, increment]
  tour_id int [not null, ref: > tours.id]
  video_url varchar(500) [not null]
}

Table tour_schedules [headercolor: #D97706] {
  id int [pk, increment]
  tour_id int [not null, ref: > tours.id]
  start_date datetime(3) [not null]
  end_date datetime(3) [not null]
  available_seats int
  booked_seats int
  price_override decimal(12, 2)
  status varchar(255)
}

Table tour_itineraries [headercolor: #D97706] {
  id int [pk, increment]
  tour_id int [not null, ref: > tours.id]
  day_number int [not null]
  title varchar(255)
  description text
}

Table tour_tags [headercolor: #D97706] {
  id int [pk, increment]
  name varchar(255) [not null]
}

Table tour_tag_mappings [headercolor: #D97706] {
  tour_id int [pk, ref: > tours.id]
  tag_id int [pk, ref: > tour_tags.id]
}

Table promo_codes [headercolor: #CA8A04] {
  id int [pk, increment]
  code varchar(64) [unique, not null]
  fixed_off decimal(12, 2)
  percent_off decimal(5, 2)
  max_discount_amount decimal(12, 2)
  is_active boolean [not null, default: true]
  valid_from_utc datetime(3)
  valid_to_utc datetime(3)
  tour_id int [ref: > tours.id]

  Note: 'tour_id ON DELETE SET NULL'
}

Table tour_embeddings [headercolor: #78716C] {
  id int [pk, increment]
  tour_id int [not null, ref: > tours.id]
  embedding text [not null]
  content_chunk text
}

// =============================================================================
// 4. Nhà cung cấp & dịch vụ gắn lịch trình
// =============================================================================

Table suppliers [headercolor: #DC2626] {
  id int [pk, increment]
  name varchar(255) [not null]
  type varchar(32) [not null, note: 'enum SupplierType']
  phone varchar(50)
  email varchar(255)
  address varchar(500)
  website varchar(500)
  tax_code varchar(50)
  notes text
  is_active boolean [not null, default: true]
  created_at_utc datetime(3) [default: `now()`]
}

Table tour_transports [headercolor: #DC2626] {
  id int [pk, increment]
  tour_id int [not null, ref: > tours.id]
  supplier_id int [ref: > suppliers.id]
  leg_order int [not null]
  vehicle_type varchar(32) [not null, note: 'enum VehicleType']
  vehicle_detail varchar(255)
  seat_class varchar(100)
  departure_point varchar(255) [not null]
  arrival_point varchar(255) [not null]
  estimated_hours decimal(8, 2)
  notes text
}

Table tour_accommodations [headercolor: #DC2626] {
  id int [pk, increment]
  itinerary_id int [not null, ref: > tour_itineraries.id]
  supplier_id int [ref: > suppliers.id]
  hotel_name varchar(255) [not null]
  star_rating int
  room_type varchar(100)
  check_in_note varchar(255)
  check_out_note varchar(255)
  address varchar(500)
  map_url varchar(500)
}

Table tour_meals [headercolor: #DC2626] {
  id int [pk, increment]
  itinerary_id int [not null, ref: > tour_itineraries.id]
  supplier_id int [ref: > suppliers.id]
  meal_type varchar(32) [not null, note: 'enum MealType']
  restaurant_name varchar(255)
  menu_style varchar(255)
  dietary_notes varchar(500)
}

// =============================================================================
// 5. Đặt chỗ & thanh toán (luồng giao dịch — đặt dưới giống orders / payments)
// =============================================================================

Table bookings [headercolor: #0D9488] {
  id int [pk, increment]
  user_id int [ref: > users.id]
  tour_schedule_id int [not null, ref: > tour_schedules.id]
  number_of_people int [not null]
  booking_date_utc datetime(3) [default: `now()`]
  total_amount decimal(12, 2)
  contact_full_name varchar(255)
  contact_email varchar(255)
  contact_phone varchar(50)
  contact_address varchar(500)
  notes text
  discount_code varchar(64)
  discount_amount decimal(12, 2)
  single_room_count int [not null, default: 0]
  single_room_supplement_amount decimal(12, 2)
  status varchar(32) [not null, note: 'enum BookingStatus']
  expired_at_utc datetime(3)
}

Table booking_passengers [headercolor: #0D9488] {
  id int [pk, increment]
  booking_id int [not null, ref: > bookings.id]
  age_category varchar(32) [not null, note: 'enum BookingPassengerAgeCategory']
  full_name varchar(255) [not null]
  date_of_birth datetime(3)
  gender varchar(20)
  passport_number varchar(50)
}

Table booking_status_histories [headercolor: #0D9488] {
  id int [pk, increment]
  booking_id int [not null, ref: > bookings.id]
  old_status varchar(32) [note: 'enum BookingStatus']
  new_status varchar(32) [note: 'enum BookingStatus']
  changed_at_utc datetime(3) [default: `now()`]
}

Table payments [headercolor: #0F766E] {
  id int [pk, increment]
  booking_id int [not null, ref: > bookings.id]
  payment_gateway varchar(100)
  payment_method varchar(100)
  transaction_code varchar(255)
  amount decimal(12, 2)
  status varchar(32) [not null, note: 'enum PaymentStatus']
  paid_at_utc datetime(3)
}

// =============================================================================
// 6. Tương tác
// =============================================================================

Table reviews [headercolor: #DB2777] {
  id int [pk, increment]
  user_id int [not null, ref: > users.id]
  tour_id int [not null, ref: > tours.id]
  rating int [not null]
  comment varchar(2000)
  created_at_utc datetime(3) [default: `now()`]

  Indexes {
    (user_id, tour_id) [unique]
  }
}

Table wishlists [headercolor: #DB2777] {
  id int [pk, increment]
  user_id int [not null, ref: > users.id]
  tour_id int [not null, ref: > tours.id]
  created_at_utc datetime(3) [default: `now()`]

  Indexes {
    (user_id, tour_id) [unique]
  }
}

Table notifications [headercolor: #64748B] {
  id int [pk, increment]
  user_id int [not null, ref: > users.id]
  title varchar(255)
  content text
  is_read boolean [not null, default: false]
  created_at_utc datetime(3) [default: `now()`]
}

Table user_behaviors [headercolor: #78716C] {
  id int [pk, increment]
  user_id int [not null, ref: > users.id]
  tour_id int [not null, ref: > tours.id]
  action varchar(100) [not null]
  created_at_utc datetime(3) [default: `now()`]
}

// =============================================================================
// 7. Chat
// =============================================================================

Table chat_sessions [headercolor: #4F46E5] {
  id int [pk, increment]
  user_id int [ref: > users.id]
  session_key varchar(255) [unique]
  started_at_utc datetime(3) [default: `now()`]
}

Table chat_messages [headercolor: #4F46E5] {
  id int [pk, increment]
  session_id int [not null, ref: > chat_sessions.id]
  role varchar(50) [not null]
  content text [not null]
  created_at_utc datetime(3) [default: `now()`]
}

// =============================================================================
// Nhóm kéo trên canvas (sau khi định nghĩa bảng)
// =============================================================================

TableGroup user_and_auth {
  users
  user_preferences
  refresh_tokens
  blacklisted_access_tokens
  reset_password_tokens
  email_verification_tokens
  oauth_accounts
}

TableGroup geography {
  regions
  provinces
  locations
}

TableGroup tours_catalog {
  tours
  tour_images
  tour_videos
  tour_schedules
  tour_itineraries
  tour_tags
  tour_tag_mappings
  promo_codes
  tour_embeddings
}

TableGroup suppliers_and_services {
  suppliers
  tour_transports
  tour_accommodations
  tour_meals
}

TableGroup booking_and_payment {
  bookings
  booking_passengers
  booking_status_histories
  payments
}

TableGroup engagement {
  reviews
  wishlists
  notifications
  user_behaviors
}

TableGroup chat {
  chat_sessions
  chat_messages
}
